crates/swc/tests/tsc-references/unionTypeIdentity.1.normal.js
//// [unionTypeIdentity.ts]
// Two types are considered identical when
// they are union types with identical sets of constituent types, or
var strOrNum;
var strOrNum;
var strOrNum;
var strOrNum; // error
var strOrNum; // error
var strOrNum; // error
